docs/matrixlabs/receipts/receipt_20260620_214713.txt
MLBLOCK_RECEIPT_START
timestamp=20260620_214713
receipt_file=/home/asd/matrixlab_receipts/receipt_20260620_214713.txt

BUILD_FRONTIER_DEPTH_PROBE_FIX_CANDIDATE_V0

STATUS_BEFORE
?? data/

PATCH_GITIGNORE

WRITE_FRONTIER_DEPTH_CANDIDATE_SCRIPT

PY_COMPILE
  File "scripts/build_frontier_depth_probe_fix_candidate.py", line 119
    failures.append(f"authorizes_fix_candidate_kind.get('authorizes_fix_candidate_ids')}")
                                                                                       ^
SyntaxError: f-string: single '}' is not allowed

MLBLOCK_EXIT_CODE=1
MLBLOCK_RECEIPT_END
